--- a/src/main.css
+++ b/src/main.css
@@ -37,6 +37,7 @@
 table {
   border-collapse: collapse;
   border: 2px solid blue;
+  margin-bottom: 20px;
 }
 
 #topContainer {
@@ -82,4 +83,8 @@ h5 {
 
 .hide-me[aria-expanded="true"] {
   display: none;
+}
+
+h1 {
+  color: rgb(45, 148, 148);
 }
